@@ -27,7 +27,7 @@ public class ControlledVocabularyValueConverter implements Converter {
         if (submittedValue == null || submittedValue.equals("")) {
             return "";
         } else {
-            ControlledVocabularyValue cvv = datasetFieldService.findControlledVocabularyValue(new Long(submittedValue));
+            ControlledVocabularyValue cvv = datasetFieldService.findControlledVocabularyValue(Long.valueOf(submittedValue));
             return cvv;
         }
     }
