@@ -730,7 +730,7 @@ public class DatasetPage implements java.io.Serializable {
     }
 
     public void showAll() {
-        setNumberOfFilesToShow(new Long(fileMetadatasSearch.size()));
+        setNumberOfFilesToShow(Long.valueOf(fileMetadatasSearch.size()));
     }
 
     private List<FileMetadata> selectFileMetadatasForDisplay() {
@@ -3850,7 +3850,7 @@ public class DatasetPage implements java.io.Serializable {
 
         UIInput reasonRadio = (UIInput) toValidate.getAttributes().get("reasonRadio");
         Object reasonRadioValue = reasonRadio.getValue();
-        Integer radioVal = new Integer(reasonRadioValue.toString());
+        Integer radioVal = Integer.valueOf(reasonRadioValue.toString());
 
         if (radioVal == 7 && (value == null || value.toString().isEmpty())) {
             ((UIInput) toValidate).setValid(false);
