@@ -126,7 +126,7 @@ public class UserServiceBean {
     private AuthenticatedUser createAuthenticatedUserForView(Object[] dbRowValues, String roles, int rowNum) {
         AuthenticatedUser user = new AuthenticatedUser();
 
-        user.setId(new Long((int) dbRowValues[0]));
+        user.setId(Long.valueOf((int) dbRowValues[0]));
         user.setUserIdentifier((String) dbRowValues[1]);
         user.setLastName(UserUtil.getStringOrNull(dbRowValues[2]));
         user.setFirstName(UserUtil.getStringOrNull(dbRowValues[3]));
