@@ -1038,8 +1038,8 @@ public class NewDTAFileReader extends TabularDataFileReader {
                                 String[] voTokens = voPair.split(",", 2);
 
                                 try {
-                                    v = new Long(voTokens[0]);
-                                    o = new Long(voTokens[1]);
+                                    v = Long.valueOf(voTokens[0]);
+                                    o = Long.valueOf(voTokens[1]);
                                 } catch (NumberFormatException nfex) {
                                     throw new IOException("Illegal v,o value: " + voPair + " for variable "
                                             + varindex + ", observation " + obsindex);
@@ -1321,7 +1321,7 @@ public class NewDTAFileReader extends TabularDataFileReader {
             String stringLengthToken = variableType.substring(3);
             Integer stringLength;
             try {
-                stringLength = new Integer(stringLengthToken);
+                stringLength = Integer.valueOf(stringLengthToken);
             } catch (NumberFormatException nfe) {
                 stringLength = null;
             }
@@ -1359,13 +1359,13 @@ public class NewDTAFileReader extends TabularDataFileReader {
         if (FormatType.matches("^%tc.*")) {
             // tc is a relatively new format
             // datum is millisecond-wise
-            milliSeconds = Math.round(new Double(rawDatum)) + STATA_BIAS_TO_EPOCH;
+            milliSeconds = Math.round(Double.valueOf(rawDatum)) + STATA_BIAS_TO_EPOCH;
             decodedDateTime = sdf_ymdhmsS.format(new Date(milliSeconds));
             format = sdf_ymdhmsS.toPattern();
             logger.fine("tc: result=" + decodedDateTime + ", format = " + format);
 
         } else if (FormatType.matches("^%t?d.*")) {
-            milliSeconds = Math.round(new Double(rawDatum)) * MILLISECCONDS_PER_DAY + STATA_BIAS_TO_EPOCH;
+            milliSeconds = Math.round(Double.valueOf(rawDatum)) * MILLISECCONDS_PER_DAY + STATA_BIAS_TO_EPOCH;
             logger.fine("milliSeconds=" + milliSeconds);
 
             decodedDateTime = sdf_ymd.format(new Date(milliSeconds));
@@ -1374,7 +1374,7 @@ public class NewDTAFileReader extends TabularDataFileReader {
 
         } else if (FormatType.matches("^%t?w.*")) {
 
-            long weekYears = Math.round(new Double(rawDatum));
+            long weekYears = Math.round(Double.valueOf(rawDatum));
             long left = Math.abs(weekYears) % 52L;
             long years;
             if (weekYears < 0L) {
@@ -1405,7 +1405,7 @@ public class NewDTAFileReader extends TabularDataFileReader {
 
         } else if (FormatType.matches("^%t?m.*")) {
             // month 
-            long monthYears = Math.round(new Double(rawDatum));
+            long monthYears = Math.round(Double.valueOf(rawDatum));
             long left = Math.abs(monthYears) % 12L;
             long years;
             if (monthYears < 0L) {
@@ -1432,7 +1432,7 @@ public class NewDTAFileReader extends TabularDataFileReader {
 
         } else if (FormatType.matches("^%t?q.*")) {
             // quarter
-            long quarterYears = Math.round(new Double(rawDatum));
+            long quarterYears = Math.round(Double.valueOf(rawDatum));
             long left = Math.abs(quarterYears) % 4L;
             long years;
             if (quarterYears < 0L) {
@@ -1473,7 +1473,7 @@ public class NewDTAFileReader extends TabularDataFileReader {
             // odd number:2nd half
             // even number: 1st half
 
-            long halvesYears = Math.round(new Double(rawDatum));
+            long halvesYears = Math.round(Double.valueOf(rawDatum));
             long left = Math.abs(halvesYears) % 2L;
             long years;
             if (halvesYears < 0L) {
