@@ -86,7 +86,7 @@ public class SolrQueryResponse {
 
         for (String var : requiredVars) {
             if (!publicationStatusCounts.containsKey(var)) {
-                publicationStatusCounts.put(var, new Long(0));
+                publicationStatusCounts.put(var, Long.valueOf(0));
             }
         }
         return this.getMapCountsAsJSON(publicationStatusCounts);
@@ -109,7 +109,7 @@ public class SolrQueryResponse {
         //String[] requiredVars = { "dataverses_count", "datasets_count", "files_count"};
         for (String var : SolrQueryResponse.DVOBJECT_COUNT_KEYS) {
             if (!dvObjectCounts.containsKey(var)) {
-                dvObjectCounts.put(var, new Long(0));
+                dvObjectCounts.put(var, Long.valueOf(0));
             }
         }
 
