@@ -113,9 +113,9 @@ public class CSVFileReaderTest {
 
         assertNotNull(result.getDataVariables());
 
-        assertEquals(result.getVarQuantity(), new Long(result.getDataVariables().size()));
+        assertEquals(result.getVarQuantity(), Long.valueOf(result.getDataVariables().size()));
 
-        assertEquals(result.getVarQuantity(), new Long(expectedVariableTypes.length));
+        assertEquals(result.getVarQuantity(), Long.valueOf(expectedVariableTypes.length));
 
         assertEquals(expectedNumberOfCases, result.getCaseQuantity());
 
@@ -166,7 +166,7 @@ public class CSVFileReaderTest {
 
         assertNotNull(generatedDataTable.getDataVariables());
 
-        assertEquals(generatedDataTable.getVarQuantity(), new Long(generatedDataTable.getDataVariables().size()));
+        assertEquals(generatedDataTable.getVarQuantity(), Long.valueOf(generatedDataTable.getDataVariables().size()));
 
         assertEquals(generatedDataTable.getVarQuantity(), expectedNumberOfVariables);
 
@@ -310,7 +310,7 @@ public class CSVFileReaderTest {
 
         assertNotNull(generatedDataTable.getDataVariables());
 
-        assertEquals(generatedDataTable.getVarQuantity(), new Long(generatedDataTable.getDataVariables().size()));
+        assertEquals(generatedDataTable.getVarQuantity(), Long.valueOf(generatedDataTable.getDataVariables().size()));
 
         assertEquals(generatedDataTable.getVarQuantity(), expectedNumberOfVariables);
 
