@@ -276,7 +276,7 @@ public class PrivateUrlUtilTest {
         RoleAssignment ra = new RoleAssignment(aRole, anAssignee, dataset, privateUrlToken);
         PrivateUrl privateUrl = PrivateUrlUtil.getPrivateUrlFromRoleAssignment(ra, dataverseSiteUrl);
         assertNotNull(privateUrl);
-        assertEquals(new Long(42), privateUrl.getDataset().getId());
+        assertEquals(Long.valueOf(42), privateUrl.getDataset().getId());
         assertEquals("https://dataverse.example.edu/privateurl.xhtml?token=cd71e9d7-73a7-4ec8-b890-3d00499e8693", privateUrl.getLink());
     }
 
